# pqc

./: .gitignore  CONTRIBUTING.md  DOCS_GENERATION.md  MANIFEST.in  README.md  RELEASE.md  SUMMARY_REPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  api.rst  cli.rst  concepts.rst  conf.py  examples.rst  faq.rst  index.rst  installation.rst  overview.rst  quickstart.rst
docs/configuration_deep_dive/: bad_cfg_ou_fdr.rst  detector_stack.rst  full_explainer.rst  full_explainer.rst~  index.rst  overview.rst  semantics.rst
docs/statistics/: delta_chi2.rst  detector_mapping.rst  fdr_bh.rst  index.rst  mad_scores.rst  ou_innovations.rst
src/: __init__.py  cli.py  config.py  pipeline.py
src/detect/: __init__.py  bad_measurements.py  ou.py  transients.py
src/features/: __init__.py  backend_keys.py
src/io/: __init__.py  libstempo_loader.py  libstempo_loader.py~  merge.py  timfile.py
src/pqc/: __init__.py  cli.py  config.py  pipeline.py
src/pqc/detect/: __init__.py  bad_measurements.py  eclipse_events.py  exp_dips.py  feature_structure.py  gaussian_bumps.py  glitches.py  ou.py  robust_outliers.py  solar_events.py  step_changes.py  transients.py
src/pqc/features/: __init__.py  backend_keys.py  feature_extraction.py
src/pqc/io/: __init__.py  libstempo_loader.py  merge.py  timfile.py
src/pqc/preproc/: __init__.py  mean_model.py  variance_model.py
src/pqc/utils/: __init__.py  diagnostics.py  logging.py  settings.py  stats.py
src/utils/: __init__.py  diagnostics.py  logging.py  stats.py
tests/: test_diagnostics.py  test_dm_dvt_detector.py  test_event_membership.py  test_feature_extraction.py  test_feature_structure.py  test_loader_paths.py  test_merge.py  test_observatory_map.py  test_preproc_pipeline.py  test_step_membership_window.py
