[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc"
version = "0.1.0"
description = "PTA residual quality-control utilities"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "libstempo",
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "sphinx",
    "sphinx-autobuild",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
pqc = "pqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pqc = ["data/*.dat"]
