[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc"
version = "0.1.0"
description = "PTA residual quality-control utilities"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "libstempo",
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
    "sphinx",
    "sphinx-autobuild",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pqc"]

[tool.black]
line-length = 100
target-version = ["py39"]

[project.scripts]
pqc = "pqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pqc = ["data/*.dat"]
