[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc"
version = "0.1.0"
description = "PTA residual quality-control utilities"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Golam Mohiuddin Shaifullah"}]
keywords = ["pulsar", "PTA", "timing", "quality-control", "tempo2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
urls = {Repository = "https://github.com/golamshaifullah/pqc", Documentation = "https://golamshaifullah.github.io/pqc/"}
dependencies = [
    "numpy",
    "pandas",
]

[project.optional-dependencies]
libstempo = ["libstempo"]
test = ["pytest"]
docs = [
    "sphinx",
    "sphinx-autobuild",
]
dev = [
    "black",
    "build",
    "pytest",
    "ruff",
    "twine",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs/_build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["pqc"]

[tool.black]
line-length = 100
target-version = ["py39"]

[project.scripts]
pqc = "pqc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pqc = ["data/*.dat"]
